--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "jekyll-theme-cayman";
 
-.custom {
+.page-header {
     color: #fff;
     text-align: center;
     background-color: #8C3031;
