--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,4 +8,5 @@
     text-align: center;
     background-color: #8C3031;
     background-image: none;
+    background-image: linear-gradient(120deg, #8C3031, #8C3032);
 }
