--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,9 +14,9 @@
 nav {
   width: 230px;
   position: fixed;
-  top: 220px;
+  top: 370px;
   left:50%;
-  margin-left:-580px;
+  margin-left:-680px;
   text-align: right;
 
   ul {
@@ -59,9 +59,9 @@ nav {
       &:hover { color: #999; }
     }
 
-    // .active {
-    //   border-right:solid 4px #39C;
-    //   padding-right:13px;
-    // }
+    .active {
+      border-right:solid 4px #39C;
+      padding-right:13px;
+    }
   }
 }
