--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <nav>
         <ul></ul>
       </nav>
-      <section>
+      <section style="margin-top: 240pt;">
         {{ content }}
 
       </section>
