--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ course_title }}</h1>
-      <h2 class="project-tagline">{{ author_name }}</h2>
+      <h1 class="project-name">{{ page.course_title }}</h1>
+      <h2 class="project-tagline">{{ page.author_name }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
