--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,9 +16,12 @@
     height: 320px;
 }
 
+.project-tagline {
+    margin-top: 0px;
+}
+
 .btn {
     padding: 0.35rem 0.75rem;
-    margin-top: 0px;
 }
 
 nav {
