--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
     text-align: center;
     background-color: #8C3031;
     background-image: none;
-    background-image: linear-gradient(120deg, #8C3031, #8C3032);
+    background-image: url("../images/logo_arca.png");
     position: fixed;
     width: 100%;
     display: block;
