--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,10 @@
     color: #fff;
     text-align: center;
     background-color: #8C3031;
-    background-image: url("../images/logo_arca.png");
+    background-image: url("../images/logo_arca.pdf");
+    background-repeat: no-repeat;
+    background-position: 10% 50%;
+    background-size: 150px;
     position: fixed;
     width: 100%;
     display: block;
