--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
     color: #fff;
     text-align: center;
     background-color: #8C3031;
-    background-image: url("../images/logo_arca.pdf");
+    background-image: url("../images/arca_logo.pdf");
     background-repeat: no-repeat;
     background-position: 10% 50%;
     background-size: 150px;
