--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,18 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section style="margin-top: 240pt;">
-        {{ content }}
-
-      </section>
+      <div class="row">
+        <div class="column-toc">
+          <nav>
+            <ul></ul>
+          </nav>
+        </div>
+        <div class="column-main">
+          <section style="margin-top: 240pt;">
+            {{ content }}
+          </section>
+        </div>
+      </div>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
