--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,3 +80,22 @@ nav {
     // }
   }
 }
+
+
+/* Create four equal columns that floats next to each other */
+.column-toc {
+  float: left;
+  width: 25%;
+}
+
+.column-main {
+  float: left;
+  width: 75%;
+}
+
+/* Clear floats */
+.row:after {
+  content: "";
+  display: table;
+   clear: both;
+}
