--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,11 +27,9 @@
 }
 
 nav {
-    max-width: 25%;
+    max-width: 20%;
     position: fixed;
     top: 370px;
-    left:50%;
-    margin-left:-720px;
     text-align: right;
 
     ul {
@@ -81,18 +79,23 @@ nav {
     }
 }
 
+.main-content {
+    max-width: 74rem;
+}
 
 /* Create four equal columns that floats next to each other */
 .column-toc {
     float: left;
     position: relative;
-    width: 25%;
+    width: 20%;
 }
 
 .column-main {
   float: right;
   position: relative;
-  width: 75%;
+  width: 80%;
+  padding-left: 30px;
+  padding-right: 40px;
 }
 
 /* Clear floats */
