--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,15 @@
       {% endif %}
     </header>
 
-    <nav>
-        <ul></ul>
-    </nav>
+
 
     <main id="content" class="main-content" role="main">
-      <section style="margin-top: 240pt;">
+      <nav>
+        <ul></ul>
+      </nav>
+      <div class="main-text">
         {{ content }}
-
-      </section>
+      </div>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
