--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,15 @@
       {% endif %}
     </header>
 
-
-
     <main id="content" class="main-content" role="main">
+
       <nav>
         <ul></ul>
       </nav>
-      <div class="main-text">
+      <section style="margin-top: 240pt;">
         {{ content }}
-      </div>
+
+      </section>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
