--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,11 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-
-      <nav>
-        <ul></ul>
-      </nav>
+      <section>
+        <nav>
+          <ul></ul>
+        </nav>
+      </section>
       <section style="margin-top: 240pt;">
         {{ content }}
 
