--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,13 @@
       {% endif %}
     </header>
 
-    <main id="content" class="main-content" role="main">
-      <section style="margin-top: 240pt; float: left; width: 15%;">
+    <main id="content" class="section-toc" role="main">
+      <section class="toc-section">
         <nav>
           <ul></ul>
         </nav>
       </section>
-      <section style="margin-top: 240pt; float: left; width: 85%;">
+      <section style="section-main">
         {{ content }}
 
 
