--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,7 +27,7 @@
 }
 
 nav {
-    max-width: 20%;
+    max-width: 15%;
     position: fixed;
     top: 370px;
     text-align: right;
@@ -80,22 +80,19 @@ nav {
 }
 
 .main-content {
-    max-width: 74rem;
 }
 
 /* Create four equal columns that floats next to each other */
-.column-toc {
+.section-toc {
+    margin-top: 240pt;
     float: left;
-    position: relative;
-    width: 20%;
+    width: 15%;
 }
 
-.column-main {
-  float: right;
-  position: relative;
-  width: 80%;
-  padding-left: 30px;
-  padding-right: 40px;
+.section-main {
+  margin-top: 240pt;
+  float: left;
+  width: 85%;
 }
 
 /* Clear floats */
