--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,25 +79,16 @@ nav {
     }
 }
 
-.main-content {
-}
-
 /* Create four equal columns that floats next to each other */
-.section-toc {
+section-toc {
     margin-top: 240pt;
     float: left;
     width: 15%;
 }
 
-.section-main {
+section-main {
   margin-top: 240pt;
   float: left;
   width: 85%;
 }
 
-/* Clear floats */
-.row:after {
-  content: "";
-  display: table;
-   clear: both;
-}
