--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <section class="margin-top: 240pt; float: left; width: 15%;">
+      <section style="margin-top: 240pt; float: left; width: 15%;">
         <nav>
           <ul></ul>
         </nav>
