--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,12 +30,12 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <section style="margin-top: 240pt; float: left; width: 15%;">
+      <section style="margin-top: 240pt; float: left; width: 15%; margin-right: 5%;">
         <nav>
           <ul></ul>
         </nav>
       </section>
-      <section style="margin-top: 240pt; float: left; width: 85%;">
+      <section style="margin-top: 240pt; float: left; width: 80%;">
         {{ content }}
 
 
