--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,4 +80,14 @@ nav {
 }
 
 
+.main-content {
+    max-width: 74rem;
+    padding-top: 2rem;
+    padding-right: 6rem;
+    padding-bottom: 2rem;
+    padding-left: 2rem;
+}
 
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+    color: #8C3031;
+}
