--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,8 +28,8 @@
 
 nav {
     max-width: 100%;
-    position: absolute;
-    top: 70px;
+    position: relative;
+    top: 80px;
     text-align: right;
 
     ul {
