--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <main id="content" class="main-content" role="main">
       <section style="margin-top: 240pt; float: left; width: 15%; margin-right: 5%;">
-        <nav>
+        <nav id="nav_bar">
           <ul></ul>
         </nav>
       </section>
