--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <section style="margin-top: 240pt; float: left; width: 15%; margin-right: 5%;">
-        <nav id="nav_bar">
+      <section id="nav_bar" style="margin-top: 240pt; float: left; width: 15%; margin-right: 5%;">
+        <nav>
           <ul></ul>
         </nav>
       </section>
