--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <ul></ul>
         </nav>
       </section>
-      <section style="margin-top: 240pt; float: left; width: 80%;">
+      <section id="my_content" style="margin-top: 240pt; float: left; width: 80%;">
         {{ content }}
 
 
