--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -85,6 +85,14 @@ nav {
   #nav_bar {
     display: none;
   }
+
+  #content {
+    padding-right: 2rem;
+  }
+
+  #my_content {
+    width: 100%;
+  }
 }
 
 .main-content {
