--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,12 +30,12 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <section id="nav_bar" style="margin-top: 240pt; float: left; width: 15%; margin-right: 5%;">
+      <section id="nav_bar">
         <nav>
           <ul></ul>
         </nav>
       </section>
-      <section id="my_content" style="margin-top: 240pt; float: left; width: 80%;">
+      <section id="my_content">
         {{ content }}
 
 
