--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,6 +95,20 @@ nav {
   }
 }
 
+#nav_bar {
+    margin-top: 240pt;
+    float: left;
+    width: 15%;
+    margin-right: 5%;
+}
+
+#my_content {
+    margin-top: 240pt;
+    float: left;
+    width: 80%;
+}
+
+
 .main-content {
     max-width: 74rem;
     padding-top: 2rem;
