--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,13 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <div id="nav_bar">
+      <div class="nav_bar">
         <nav>
           <ul></ul>
         </nav>
       </div>
-      <div id="my_content">
-        <section id="my_content">
+      <div class="my_content">
+        <section>
           {{ content }}
 
 
