--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
       {% endif %}
     </header>
 
-    <main id="content" class="main-content" role="main">
-      <div class="nav_bar">
+    <main class="content" class="main-content" role="main">
+      <div id="nav_bar">
         <nav>
           <ul></ul>
         </nav>
