--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,13 @@
       {% endif %}
     </header>
 
-    <main class="content" class="main-content" role="main">
+    <main id="content" class="main-content" role="main">
       <div id="nav_bar">
         <nav>
           <ul></ul>
         </nav>
       </div>
-      <div class="my_content">
+      <div id="my_content">
         <section>
           {{ content }}
 
