--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -125,3 +125,10 @@ nav {
       background-image: none;
   }
 }
+
+
+@media only screen and (min-width: 800px) and (max-width: 1050px) {
+  .page-header {
+      background-position: 5% 50%;
+  }
+}
