--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,21 @@
     display: block;
     z-index: 10;
     height: 320px;
+
+    @include large {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
+    @include medium {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
+    @include small {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
 }
 
 .project-tagline {
