--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,10 +68,10 @@ nav {
       &.tag-h1 {
         font-size: 1.2em;
 
-        a {
-          font-weight: bold;
-          color: #333;
-        }
+        // a {
+        //  font-weight: bold;
+        //  color: #333;
+        // }
 
         + .tag-h2 {
 
@@ -87,9 +87,9 @@ nav {
     }
 
     a {
-      color: #666;
+      color: #8C3031;
 
-      &:hover { color: #999; }
+      &:hover { color: #DC143C; }
     }
 
     // .active {
@@ -128,6 +128,8 @@ nav {
 a {
   color: #8C3031;
   font-weight: bold;
+
+  &:hover { color: #DC143C; }
 }
 
 @media only screen and (max-width: 800px) {
