--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,27 +67,26 @@ nav {
 
       &.tag-h1 {
         font-size: 1.2em;
+        padding-top: 15px;
 
         // a {
         //  font-weight: bold;
         //  color: #333;
         // }
 
-        + .tag-h2 {
-
-        }
       }
 
       &.tag-h2 {
-
-        + .tag-h1 {
-          margin-top:10px;
-        }
+          a {
+              font-weight: normal;
+              color: #333;
+          }
       }
     }
 
     a {
       color: #8C3031;
+      font-weight: bold;
 
       &:hover { color: #DC143C; }
     }
